[package]
name = "rust-20210328-bincode-block-cocoa-dispatch-metal-objc-serde-winit"
version = "0.1.0"
authors = ["Mehmet Oguz Derin <mehmetoguzderin@mehmetoguzderin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies]
bincode = "1.3.2"
block = "0.1.6"
cocoa = "0.24.0"
dispatch = "0.2.0"
metal = "0.21.0"
objc = { version = "0.2.7", features = ["exception"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
winit = { version = "0.24.0", features = ["serde"] }
